# Tradebot-ai

./: .gitignore  ANALYSIS_INDEX.md  API_AND_PLUGIN_OVERVIEW.md  API_QUICK_REFERENCE.md  AUTO_TRADING_GUIDE.md  BACKTEST_README.md  BACKTEST_RESULTS_SUMMARY.md  COMPREHENSIVE_BACKTEST_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KLAAR_VOOR_MAANDAG.md  MIGRATION_GUIDE.md  MONDAY_STARTUP.md  Makefile  OPENAI_CHAT_LOGGING.md  OPTIMIZATION_RESULTS.md  PLUGIN_IMPLEMENTATION_COMPLETE.md  PLUGIN_INTEGRATION.md  PRE_LAUNCH_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_MIGRATION.md  README.md  README_MENU.md  REMOTE_ACCESS_GUIDE.md  SECURITY_SETUP.md  SHORT_SELLING_GUIDE.md  SUMMARY_V2.md  backtest_ipo.py  backtest_v2_plugins.py  backup.sh  compare_strategies.txt  config.yaml  create_modules.sh  docker-compose.yml  (+49 more)
backtest_buy_hold/: metrics.json  trades.csv
backtest_mean_reversion/: metrics.json  trades.csv
backtest_momentum/: metrics.json  trades.csv
backtest_results/: metrics.json  trades.csv
backtest_simple/: metrics.json  trades.csv
backtest_trend/: metrics.json  trades.csv
configs/: config.yaml  features.yaml  secrets.env.template
optifire/: __init__.py  auto_trader.py
optifire/ai/: __init__.py  openai_client.py
optifire/api/: __init__.py  routes_ai.py  routes_auth.py  routes_chat.py  routes_config.py  routes_metrics.py  routes_orders.py  routes_plugins.py  security.py  server.py  sse.py
optifire/backtest/: __init__.py  engine.py  (+2 more)
(+501 files in other folders)
